youfull/objects/Lead_Metrics__c.object
<CustomObject>
    <fields>
        <fullName>FGL_Cus_Cl_Conv_Cus__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Closed AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign    AND Substatus=Converted to Customer</inlineHelpText>
        <label>FGL - Customer Closed Converted Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Cl_Oth__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Closed AND Sub_Status_Change_CMPGN_NR__c = Current Campaign   AND Substatus not in (Converted to Customer, Appointed)</inlineHelpText>
        <label>FGL - Customer - Closed - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Closed_App__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Closed AND Sub_Status_Change_CMPGN_NR__c = Current Campaign   AND Substatus=Appointed</inlineHelpText>
        <label>FGL - Customer - Closed - Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_IP_Cont__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Contacted</inlineHelpText>
        <label>FGL - Customer - In Progress - Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_IP_Oth__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND Creation_CMPGN_NR__c != Current Campaign   AND Substatus not in ( Rolled Up, Rep Account Received, Follow Up / Pending, Contract Signed, Scheduled, Contacted, Delegated, Lead Reassigned)</inlineHelpText>
        <label>FGL - Customer - In Progress - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_IP_Rep_Act_Rec__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Rep Account Received</inlineHelpText>
        <label>FGL - Cust - In Progress - Rep Acct Recv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_IP_Sch__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND SubStatus= scheduled</inlineHelpText>
        <label>FGL - Customer - In Progress - Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_In_Progress__c</fullName>
        <formula>FGL_Cus_IP_Cont__c + FGL_Cus_IP_Sch__c + FGL_Cust_IP_Cont_Sign__c + FGL_Cust_IP_FolUp_Pend__c + FGL_Cus_IP_Rep_Act_Rec__c + FGL_Cus_IP_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Customer - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_New_New_Lead__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=New</inlineHelpText>
        <label>FGL - Customer - New - New Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Con_N_Int__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</inlineHelpText>
        <label>FGL - Cust Rejected Contacted No Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Con_N_R__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</inlineHelpText>
        <label>FGL - Cust - Rejected Contacted No Resp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Dup_App__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</inlineHelpText>
        <label>FGL - Cust Rejected Duplicated Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Ex_as_Rep__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</inlineHelpText>
        <label>FGL - Customer -Rejected - Exists as Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Oth__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Interest</inlineHelpText>
        <label>FGL - Customer - Rejected - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Underage__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</inlineHelpText>
        <label>FGL - Customer - Rejected - Underage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cus_Rej_Wr_Data__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</inlineHelpText>
        <label>FGL - Customer - Rejected - Wrong Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cust_1st_Time_Con__c</fullName>
        <description># of FGL Customer leads contacted for the first time</description>
        <inlineHelpText># of FGL Customer leads contacted for the first time</inlineHelpText>
        <label>FGL - Cust 1st Time Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cust_IP_Cont_Sign__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Contract Signed</inlineHelpText>
        <label>FGL - Cust - In Progress Contract - Sign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cust_IP_FolUp_Pend__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Cust AND Status=In Progress AND SubStatus=Follow Up / Pending</inlineHelpText>
        <label>FGL - Cust - In Progress Follow Up/Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cust_Time_To_Conv__c</fullName>
        <label>FGL - Cust Time To Conv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Cust_Time_To_con__c</fullName>
        <description>Time to contact for FGL Customer leads</description>
        <inlineHelpText>Time to contact for FGL Customer leads</inlineHelpText>
        <label>FGL - Cust Time To con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Customer_Closed__c</fullName>
        <formula>FGL_Cus_Cl_Conv_Cus__c + FGL_Cus_Closed_App__c + FGL_Cus_Cl_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Customer  - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Customer_Rejected__c</fullName>
        <formula>FGL_Cus_Rej_Con_N_Int__c + FGL_Cus_Rej_Con_N_R__c + FGL_Cus_Rej_Dup_App__c + FGL_Cus_Rej_Ex_as_Rep__c + FGL_Cus_Rej_Underage__c + FGL_Cus_Rej_Wr_Data__c + FGL_Cus_Rej_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Customer - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Customer__c</fullName>
        <formula>FGL_Cus_New_New_Lead__c + FGL_Customer_Closed__c + FGL_Customer_Rejected__c + FGL_Cus_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_In_Progress__c</fullName>
        <formula>FGL_Rep_In_Progress__c + FGL_Cus_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_New__c</fullName>
        <formula>FGL_Rep_New_New_Lead__c + FGL_Cus_New_New_Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - New</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rejected__c</fullName>
        <formula>FGL_Rep_Rejected__c + FGL_Customer_Rejected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_1st_Time_Con__c</fullName>
        <description># of FGL Reps contacted for the first time</description>
        <inlineHelpText># of FGL Reps contacted for the first time</inlineHelpText>
        <label>FGL - Rep 1st Time Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Cl_Conv_Cus__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=Closed AND Sub_Sub_Status_Change_CMPGN_NR__c = Current Campaign   AND Substatus=Converted to Customer</inlineHelpText>
        <label>FGL - Rep - Closed - Converted Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Closed_App__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=Closed AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Appointed</inlineHelpText>
        <label>FGL - Rep - Closed - Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Closed_Others__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=Closed AND Sub_Status_Change_CMPGN_NR__c = Current Campaign   AND Substatus not in (Converted to Customer, Appointed)</inlineHelpText>
        <label>FGL - Rep - Closed - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Closed__c</fullName>
        <formula>FGL_Rep_Cl_Conv_Cus__c + FGL_Rep_Closed_App__c + FGL_Rep_Closed_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Rep  - Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_Cont_Sign__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Contract Signed</inlineHelpText>
        <label>FGL - Rep - In Progress - Contract Sign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_Cont__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Contacted</inlineHelpText>
        <label>FGL - Rep - In Progress - Contacted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_F_Up_Pend__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Follow Up / Pending</inlineHelpText>
        <label>FGL - Rep - In Progress- Follow Up/Pend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_Others__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress AND Creation_CMPGN_NR__c != Current Campaign   AND Substatus not in ( Rolled Up, Rep Account Received, Follow Up / Pending, Contract Signed, Scheduled, Contacted, Delegated, Lead Reassigned)</inlineHelpText>
        <label>FGL - Rep - In Progress - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_Rep_Act_Rec__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus= Rep Account Received</inlineHelpText>
        <label>FGL - Rep - In Progress - Rep Acct Recv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_IP_Scheduled__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep ANDStatus=In Progress  AND Substatus=  scheduled</inlineHelpText>
        <label>FGL - Rep - In Progress - Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_In_Progress__c</fullName>
        <formula>FGL_Rep_IP_Cont__c + FGL_Rep_IP_Scheduled__c + FGL_Rep_IP_Cont_Sign__c + FGL_Rep_IP_F_Up_Pend__c + FGL_Rep_IP_Rep_Act_Rec__c + FGL_Rep_IP_Others__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Rep - In Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_New_New_Lead__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=New</inlineHelpText>
        <label>FGL - Rep - New - New Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Con_N_Res__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No response/Slow</inlineHelpText>
        <label>FGL - Rep - Rejected - Contacted No Resp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Con_No_Int__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Contacted - No Longer Interested</inlineHelpText>
        <label>FGL - Rep Rejected Contacted - No Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Dup_App__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Duplicate Lead - Appointed by another</inlineHelpText>
        <label>FGL - Rep Rejected Duplicated Appointed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Ex_as_Rep__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Exists as Representative</inlineHelpText>
        <label>FGL - Rep Rejected Exists as Represented</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Oth__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus not in (Wrong Data, Underage, Exists as a Representative, Duplicated Lead - Apppointed by another, Contacted - No longer Intereste</inlineHelpText>
        <label>FGL - Rep - Rejected - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Und__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus= underage</inlineHelpText>
        <label>FGL - Rep - Rejected - Underage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rej_Wr_Data__c</fullName>
        <inlineHelpText>Lead Type= FGL AND Contact Type=Rep AND Status=Rejected AND Sub_Status_Change_CMPGN_NR__c = Current Campaign  AND Substatus=Wrong Data</inlineHelpText>
        <label>FGL - Rep - Rejected - Wrong Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Rejected__c</fullName>
        <formula>FGL_Rep_Rej_Con_No_Int__c + FGL_Rep_Rej_Con_N_Res__c + FGL_Rep_Rej_Dup_App__c + FGL_Rep_Rej_Ex_as_Rep__c + FGL_Rep_Rej_Und__c + FGL_Rep_Rej_Wr_Data__c + FGL_Rep_Rej_Oth__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Rep - Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Time_to_Con__c</fullName>
        <description>Time to contact for FGL Reps</description>
        <inlineHelpText>Time to contact for FGL Reps</inlineHelpText>
        <label>FGL - Rep Time to Con</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep_Time_to_Conv__c</fullName>
        <description>Time to conversion for FGL Reps</description>
        <inlineHelpText>Time to conversion for FGL Reps</inlineHelpText>
        <label>FGL - Rep Time to Conv</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Rep__c</fullName>
        <formula>FGL_Rep_New_New_Lead__c + FGL_Rep_Closed__c + FGL_Rep_Rejected__c + FGL_Rep_In_Progress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FGL - Rep</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Time_to_Contact__c</fullName>
        <inlineHelpText>Sum (Time_to_Contact__c)  where Lead Type= FGL AND  Contact Type IN(Cust, Rep) AND First_Contacted_CMPGN_NR__c = Current Campaign</inlineHelpText>
        <label>FGL - Time to Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FGL_Time_to_Conversion__c</fullName>
        <inlineHelpText>Sum(Time_to_Conversion__c) where Lead Type= FGL AND  Contact Type IN(Cust, Rep) AND Status=Closed AND Sub_Status_Change_CMPGN_NR__c=Current Campaign</inlineHelpText>
        <label>FGL - Time to Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ACCT_NR_KEY__c</fullName>
        <description>Refers to User__r.MRKT_ID_ACCT_NR_KEY__c</description>
        <inlineHelpText>Refers to User__r.MRKT_ID_ACCT_NR_KEY__c</inlineHelpText>
        <label>MRKT ID ACCT NR KEY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ACCT_NR_ZONE_CMPGN_KEY__c</fullName>
        <description>Primary key: market code + account number + zone code + campaign number</description>
        <externalId>true</externalId>
        <inlineHelpText>Primary key: market code + account number + zone code + campaign number</inlineHelpText>
        <label>MRKT_ID_ACCT_NR_ZONE_CMPGN_KEY</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <description>Refers to User__r.MRKT_ID__c</description>
        <externalId>true</externalId>
        <inlineHelpText>Refers to User__r.MRKT_ID__c</inlineHelpText>
        <label>MRKT ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Leads Metrics</relationshipLabel>
        <relationshipName>Leads_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QRTR__c</fullName>
        <description>Market Current Quarter Nr. (Refers to Market__r.CURRENT_QRTR__c)</description>
        <inlineHelpText>Market Current Quarter Nr. (Refers to Market__r.CURRENT_QRTR__c)</inlineHelpText>
        <label>QRTR</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_DIV_NM__c</fullName>
        <description>Division code (Refers to Lead.SLS_DIV_NM__c)</description>
        <inlineHelpText>Division code (Refers to Lead.SLS_DIV_NM__c)</inlineHelpText>
        <label>SLS_DIV_NM</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLS_ZONE_CD__c</fullName>
        <description>Zone code (Refers to Lead.SLS_ZONE_CD__c)</description>
        <inlineHelpText>Zone code (Refers to Lead.SLS_ZONE_CD__c)</inlineHelpText>
        <label>SLS_ZONE_CD</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Refers to User__r.LDRSHP_TITL_LVL_NBR__c</description>
        <inlineHelpText>Refers to User__r.LDRSHP_TITL_LVL_NBR__c</inlineHelpText>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads_Metrics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Lead Metrics</label>
    <nameField>
        <displayFormat>LM-{0000}</displayFormat>
        <label>Lead Metrics Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Metrics</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>